--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
     </div>
     <div class="contact-form">
         <h2>Contact Us</h2>
-        <form action="mail.php" method="post">
+        <form action="https://formsubmit.co/earwoodmarketing@outlook.com" method="POST">
+          
 
-            <label for=" first name">First Name</label>
+            <label for="first name">First Name</label>
             <input type="text" id="first name" name="first name">
 
             <label for="last name">Last Name</label>
