--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
 
             <label for="website">Website</label>
             <input type="website" id="website" name="website" required>
+            <label for="terms">
+                <input type="checkbox" id="terms" name="terms" required>
+                I Agree to Terms & Conditions
+            </label>
             
             <button type="submit">Claim The Free Strategy!</button>
         </form>
