--- a/terms.html
+++ b/terms.html
@@ -10,7 +10,7 @@
     <header>
         <h1>Terms and Conditions</h1>
     </header>
-    <main>
+    <main class="terms-content">
         <section>
             <h2>1. Introduction</h2>
             <p>Welcome to Earwood Marketing. These Terms and Conditions govern your use of our website and services. By accessing or using our website, you agree to comply with and be bound by these terms.</p>
@@ -41,7 +41,7 @@
         </section>
         <section>
             <h2>8. Governing Law</h2>
-            <p>These terms shall be governed and construed in accordance with the laws of [Your State/Country], without regard to its conflict of law provisions.</p>
+            <p>These terms shall be governed and construed in accordance with the laws of Virginia, USA, without regard to its conflict of law provisions.</p>
         </section>
         <section>
             <h2>9. Changes to Terms</h2>
@@ -49,7 +49,7 @@
         </section>
         <section>
             <h2>10. Contact Us</h2>
-            <p>If you have any questions about these Terms, please contact us at [Your Contact Information].</p>
+            <p>If you have any questions about these Terms, please contact us at earwood.r@gmail.com.</p>
         </section>
     </main>
     <footer>
