google tag install

--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,15 @@
     <title>Contact Us - Earwood Marketing</title>
     <link rel="stylesheet" href="company.css">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7XXQV50403"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7XXQV50403');
+</script>
 <body>
     <div class="header">
         <img src="images/Companylogo.png" alt="Company Logo" class="logo"> 
