--- a/index.html
+++ b/index.html
@@ -4,11 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Ryan Earwood">
+    <meta name="description" content="Earwood Marketing - Bringing a consistent stream of new customers to your business.">
     <title>Digital Marketing Agency</title>
     <link rel="stylesheet" href="company.css">
     
 
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7XXQV50403"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7XXQV50403');
+</script>
 <body>
     <div class="header">
         <img src="images/Companylogo.png" alt="Company Logo" class="logo"> 
