--- a/terms.html
+++ b/terms.html
@@ -6,6 +6,15 @@
     <title>Terms and Conditions</title>
     <link rel="stylesheet" href="company.css"> 
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7XXQV50403"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7XXQV50403');
+</script>
 <body>
     <header>
         <h1>Terms and Conditions</h1>
