google tag install

--- a/terms.html
+++ b/terms.html
@@ -6,50 +6,60 @@
     <title>Terms and Conditions</title>
     <link rel="stylesheet" href="company.css"> 
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7XXQV50403"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-7XXQV50403');
+</script>
 <body>
     <header>
         <h1>Terms and Conditions</h1>
     </header>
     <main class="terms-content">
+        <p>Effective Date: 11/23/2024</p>
         <section>
-            <h2>1. Introduction</h2>
-            <p>Welcome to Earwood Marketing. These Terms and Conditions govern your use of our website and services. By accessing or using our website, you agree to comply with and be bound by these terms.</p>
+            <h2>1. Acceptance of Terms</h2>
+            <p>By accessing and using the contact form on the Earwood Marketing website, you agree to be bound by these Terms and Conditions. If you do not agree with any part of these terms, please do not use our contact form.</p>
         </section>
         <section>
-            <h2>2. Services</h2>
-            <p>Earwood Marketing provides digital marketing services, including but not limited to SEO, social media marketing, content creation, and online advertising. The scope of services will be outlined in a separate agreement.</p>
+            <h2>2. Information Collection</h2>
+            <p>When you submit your information via the contact form, we collect personal data including but not limited to your name, email address, phone number, and any other information you provide.</p>
         </section>
         <section>
-            <h2>3. User Responsibilities</h2>
-            <p>You agree to use our website and services for lawful purposes only. You must not use our website in any way that causes, or may cause, damage to the website or impairment of the availability or accessibility of the website.</p>
+            <h2>3. Use of Information</h2>
+            <p>The information you provide will be used solely for the purpose of responding to your inquiries, providing services, and improving our offerings. We do not share your personal information with third parties without your explicit consent, except as required by law.</p>
         </section>
         <section>
-            <h2>4. Intellectual Property</h2>
-            <p>All content, trademarks, and data on this website, including but not limited to software, databases, text, graphics, icons, hyperlinks, private information, designs, and agreements, are the property of Earwood Marketing and are protected by law.</p>
+            <h2>4. Data Protection</h2>
+            <p>We implement appropriate technical and organizational measures to protect your personal information against unauthorized access, alteration, disclosure, or destruction.</p>
         </section>
         <section>
-            <h2>5. Limitation of Liability</h2>
-            <p>Earwood Marketing will not be liable for any direct, indirect, incidental, special, or consequential damages arising out of or in connection with the use of our services or website.</p>
+            <h2>5. User Obligations</h2>
+            <p>By using our contact form, you agree to:</p>
+            <ul>
+                <li>Provide accurate and up-to-date information.</li>
+                <li>Not use the form for any illegal or unauthorized purpose.</li>
+                <li>Not impersonate any person or entity or misrepresent your affiliation with any person or entity.</li>
+            </ul>
         </section>
         <section>
-            <h2>6. Payment Terms</h2>
-            <p>Payment terms will be outlined in the service agreement. Failure to make timely payments may result in suspension or termination of services.</p>
+            <h2>6. Limitation of Liability</h2>
+            <p>Earwood Marketing is not liable for any direct, indirect, incidental, special, or consequential damages that result from the use of, or inability to use, the contact form or any information obtained through the form.</p>
         </section>
         <section>
-            <h2>7. Termination</h2>
-            <p>We reserve the right to terminate or suspend access to our services immediately, without prior notice or liability, for any reason whatsoever, including without limitation if you breach the Terms.</p>
+            <h2>7. Changes to Terms and Conditions</h2>
+            <p>We reserve the right to modify these Terms and Conditions at any time. Your continued use of the contact form constitutes your acceptance of the updated terms.</p>
         </section>
         <section>
             <h2>8. Governing Law</h2>
-            <p>These terms shall be governed and construed in accordance with the laws of Virginia, USA, without regard to its conflict of law provisions.</p>
+            <p>These Terms and Conditions are governed by and construed in accordance with the laws of the State of Virginia, without regard to its conflict of law principles.</p>
         </section>
         <section>
-            <h2>9. Changes to Terms</h2>
-            <p>We reserve the right to modify or replace these Terms at any time. It is your responsibility to review these Terms periodically.</p>
-        </section>
-        <section>
-            <h2>10. Contact Us</h2>
-            <p>If you have any questions about these Terms, please contact us at earwood.r@gmail.com.</p>
+            <h2>9. Contact Information</h2>
+            <p>If you have any questions or concerns about these Terms and Conditions, please contact us at earwoodmarketing@outlook.com.</p>
         </section>
     </main>
     <footer>
