--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
     <footer>
         <div class="footer-content">
-            <p>©<span id="currentyear"></span> - <span class="color-name">Ryan Earwood</span> Virginia</p>
+            <p>©<span id="currentyear"></span> - <span class="color-name">Ryan Earwood</span>, Virginia</p>
             <p>Last update: <span id="lastModified"></span></p>
         </div>
         <div class="social-icons">
