--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="hero">
         <h1>More Customers, More Jobs, More Revenue</h1>
         <p>Let Earwood Marketing bring a consistent stream of new customers to your business, so you can grow without the stress of handling marketing yourself.</p>
-        <a href="contact.html" class="cta">Get More Jobs Now! With Our Free Strategy</a>
+        <a href="contact.html" class="cta">Get More Leads Now! With Our Free Strategy</a>
     </div>
 
     <h2>How It Works</h2>
