--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     <li><a href="#services">Services</a></li>
                     <li><a href="#contact">Contact</a></li>
                     <li><a href="terms.html" target="_blank">Terms & Conditions</a></li>
-                    <li><a href="privacy.html" target="_blank">Privacy Policy</a></li>
+                    <li><a href="policy.html" target="_blank">Privacy Policy</a></li>
                 </ul>
             </div>
             <div class="footer-section contact">
