--- a/policy.html
+++ b/policy.html
@@ -23,9 +23,9 @@
             <!-- Add your logo image here -->
         </div>
         <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="index.html#home">Home</a></li> 
+            <li><a href="index.html#services">Services</a></li> 
+            <li><a href="index.html#contact">Contact</a>
         </ul>
         <div class="hamburger">
             <div></div>
